--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -178,11 +178,13 @@ p {
 
 
 .spinner {
-  width: 40px;
-  height: 40px;
+  //width: 40px;
+  //height: 40px;
   @include absCenter;
   cursor: pointer;
   z-index: 1000;
+  display: none; //script.js calls jquery fade-in for intro animation
+  top: 40%;
 }
 
 h1.ml8 {
@@ -210,14 +212,14 @@ h1.ml8 {
   z-index: 2;
   display: inline-block;
   line-height: 0.7em;
-  right: -0.12em;
+  right: .03em;
   top: -0.2em;
 }
 
 .ml8 .bang {
   font-size: 1.4em;
   top: auto;
-  left: -0.06em;
+  left: -0.12em;
   transform: rotate(5deg);
 }
 
